# TEST_GS

./: .~lock.FTP 파일 정보.odt#  0_240130.bin.map  0_240130_hex.txt  0_240214.bin.map  CMakeLists.txt  FTP 파일 정보.odt  MIMAN  Makefile  README.md  cksumlog_240202  cksumlog_240202_2  cmake_install.cmake  comp.sh  decoder.py  imgui.ini  lslog_240222_0  lslog_240222_1  lslog_240222_3.log.map
amp/: ampcontrol  ampcontrol.cpp  ampoff  ampoff.cpp
cmake/: FindFreetype2.cmake  FindSSH.cmake
config/: conf_adsb_client.h  conf_cspclient.h  conf_fp.h  conf_ftp.h  conf_gosh.h  conf_hk.h  conf_log.h  conf_param.h  conf_util.h
data/HVD_Log/: log--2025-01-25-01-14-20--  log--2025-01-25-01-15-50--  log--2025-01-25-01-20-26--  log--2025-01-25-01-26-31--  log--2025-01-25-01-33-49--  log--2025-01-25-13-59-33--  log--2025-01-25-14-01-23--  log--2025-01-25-14-06-20--  log--2025-01-25-17-03-43--  log--2025-01-25-17-17-21--  log--2025-01-25-17-37-43--  log--2025-01-25-17-40-37--  log--2025-01-25-17-43-21--  log--2025-01-25-18-45-20--  log--2025-01-25-18-53-47--  log--2025-01-25-18-54-23--  log--2025-01-25-19-10-00--  log--2025-01-27-12-14-52--  log--2025-01-27-15-51-46--  log--2025-01-27-15-53-52--  log--2025-01-27-16-12-33--  log--2025-01-27-16-18-55--  log--2025-01-27-18-13-48--  log--2025-01-27-21-21-37--  log--2025-07-18-22-26-33--  log--2025-07-22-20-02-05--  log--2025-07-23-14-37-01--  log--2025-07-23-14-38-23--  log--2025-07-23-15-35-34--  log--2025-07-23-15-51-53--  log--2025-07-23-16-13-05--  log--2025-07-23-16-15-46--  log--2025-07-23-16-23-46--  log--2025-08-07-15-56-31--  log--2025-08-07-16-08-37--  log--2025-08-07-19-45-32--  log--2025-08-07-19-56-21--  log--2025-08-07-20-00-48--  log--2025-08-07-20-08-06--  log--2025-08-12-16-17-09--  (+16 more)
data/bcnpkt/: bcnpkt--2025-01-27-16-16-08--  bcnpkt--2025-01-27-16-16-28--  bcnpkt--2025-01-27-16-21-07--  bcnpkt--2025-01-27-16-22-57--  bcnpkt--2025-01-27-16-24-01--  bcnpkt--2025-01-27-16-24-55--  bcnpkt--2025-01-27-16-27-33--  bcnpkt--2025-01-27-16-28-25--  bcnpkt--2025-01-27-16-29-15--  bcnpkt--2025-01-27-16-29-35--  bcnpkt--2025-01-27-16-29-55--  bcnpkt--2025-01-27-16-30-16--  bcnpkt--2025-01-27-16-30-45--  bcnpkt--2025-01-27-16-31-11--  bcnpkt--2025-01-27-16-36-33--  bcnpkt--2025-01-27-16-39-52--  bcnpkt--2025-01-27-16-40-12--  bcnpkt--2025-01-27-16-40-32--  bcnpkt--2025-01-27-16-40-52--  bcnpkt--2025-01-27-16-41-49--  bcnpkt--2025-01-27-16-42-09--  bcnpkt--2025-01-27-16-43-09--  bcnpkt--2025-01-27-16-43-51--  bcnpkt--2025-01-27-16-44-22--  bcnpkt--2025-01-27-16-44-32--  bcnpkt--2025-01-27-16-44-51--  bcnpkt--2025-01-27-16-45-25--  bcnpkt--2025-01-27-16-48-13--  bcnpkt--2025-01-27-18-12-32--  bcnpkt--2025-01-27-18-17-50--  bcnpkt--2025-01-27-18-18-09--  bcnpkt--2025-01-27-18-18-29--  bcnpkt--2025-01-27-18-18-50--  bcnpkt--2025-01-27-18-19-09--  bcnpkt--2025-01-27-18-19-30--  bcnpkt--2025-01-27-18-19-49--  bcnpkt--2025-01-27-18-20-09--  bcnpkt--2025-01-27-18-23-06--  bcnpkt--2025-01-27-18-29-14--  bcnpkt--2025-01-27-18-29-45--  (+36 more)
data/beacon/: Beacon--1970-01-06-00-05-52--  Beacon--2022-08-22-16-59-03--  Beacon--2022-08-22-16-59-13--  Beacon--2022-08-23-03-56-03--  Beacon--2022-08-23-03-56-13--  Beacon--2022-08-23-03-56-23--  Beacon--2022-08-23-03-56-33--  Beacon--2022-08-23-03-57-23--  Beacon--2022-08-23-03-57-33--  Beacon--2022-08-23-03-57-43--  Beacon--2022-08-23-03-57-53--  Beacon--2022-08-23-03-58-03--  Beacon--2022-08-23-03-58-13--  Beacon--2022-08-23-03-58-23--  Beacon--2022-08-23-03-58-53--  Beacon--2022-08-23-03-59-23--  Beacon--2022-08-23-03-59-33--  Beacon--2022-08-23-16-03-13--  Beacon--2022-08-24-03-06-33--  Beacon--2022-08-24-16-38-43--  Beacon--2022-08-24-16-39-13--  Beacon--2022-08-24-16-39-23--  Beacon--2022-08-24-16-39-33--  Beacon--2022-08-24-16-39-43--  Beacon--2022-08-24-16-39-53--  Beacon--2022-08-24-16-40-03--  Beacon--2022-08-24-16-40-13--  Beacon--2022-08-24-16-40-33--  Beacon--2022-08-24-16-40-43--  Beacon--2022-08-24-16-41-33--  Beacon--2022-08-24-16-41-53--  Beacon--2022-08-24-16-44-53--  Beacon--2022-08-24-18-21-13--  Beacon--2022-08-24-18-21-23--  Beacon--2022-08-24-18-21-33--  Beacon--2022-08-24-18-21-43--  Beacon--2022-08-24-18-21-53--  Beacon--2022-08-24-18-22-03--  Beacon--2022-08-24-18-22-13--  Beacon--2022-08-24-18-22-23--  (+17596 more)
data/shell/: df_00001.txt  (+18 more)
fsw/: 1.sh  dflog_230517.txt  lslog.txt
lib/imgui/: CMakeLists.txt  cmake_install.cmake  imconfig.h
patch/: amnt_230609.sh  ftp_lib.so_aa  ftp_lib.so_ab  ftp_lib.so_ac  ftp_lib.so_ad  ftp_lib.so_ae  ftp_lib.so_af  ftp_lib.so_ag  ftp_lib.so_ah  ftp_lib_trunc_c23_82  ftp_lib_trunc_c62_82
src/: main.cpp  miman_autopilot.cpp  miman_autopilot.h  miman_coms.cpp  miman_coms.h  miman_config.cpp  miman_config.h  miman_csp.cpp  miman_csp.h  miman_ftp.h  miman_ftpfcd.cpp  miman_ftprdp.cpp  miman_imgui.cpp  miman_imgui.h  miman_model.cpp  miman_model.h  miman_orbital.cpp  miman_orbital.h  miman_radial.cpp  miman_radial.h  miman_s_control.cpp  miman_s_control.h  temp.cpp  tmtctest.cpp
(+1360 files in other folders)
