CMAKE_MINIMUM_REQUIRED( VERSION 3.0.0 )
CMAKE_POLICY(SET CMP0072 OLD)

PROJECT( imgui )
SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES( ${THREADS_INCLUDE_DIRS} )
LINK_LIBRARIES( Threads::Threads )

FIND_PACKAGE(CURL REQUIRED)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})
LINK_LIBRARIES(${CURL_LIBRARIES})

FIND_PACKAGE(glfw3 REQUIRED)
INCLUDE_DIRECTORIES( ${glfw3_INCLUDE_DIRS} )
LINK_LIBRARIES(glfw)

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES( ${OpenGL_INCLUDE_DIRS} )
LINK_LIBRARIES(${OpenGL_LIBRARIES})

FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES( ${GLEW_INCLUDE_DIRS} )
LINK_LIBRARIES(${GLEW_LIBRARIES})

FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES( ${GLUT_INCLUDE_DIRS} )
LINK_LIBRARIES(${GLUT_LIBRARIES})

FIND_PACKAGE(glbinding REQUIRED)
INCLUDE_DIRECTORIES( ${glbinding_INCLUDE_DIRS} )
LINK_LIBRARIES(${glbinding_LIBRARIES})

SET( CMAKE_C_FLAGS_DEBUG "-DDEBUG -DC_FLAGS" )
SET( CMAKE_EE_LINKER_FLAGS_DEBUG "-DDEBUG -DLINKER_FLAGS" )

SET(OPENGL_GL_PREFERENCE LEGACY)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

add_library(imgui
    imgui.cpp
    imgui_demo.cpp
    imgui_draw.cpp
    imgui_impl_glfw.cpp
    imgui_impl_opengl3.cpp
    imgui_tables.cpp
    imgui_widgets.cpp
    )
